--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@tsparticles/slim": "^3.9.1",
     "bootstrap": "^5.3.8",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.15",
+    "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-calendly": "^4.4.0",
