--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.10.10",
     "react-calendly": "^4.4.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.10.1",
     "tsparticles": "^3.9.1"
   },
   "devDependencies": {
