--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "prettier": "^3.7.4",
-    "vite": "^7.2.4"
+    "sharp": "^0.34.5",
+    "svgo": "^4.0.0",
+    "vite": "^7.2.4",
+    "vite-plugin-image-optimizer": "^2.0.3"
   }
 }
