--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   },
   "dependencies": {
     "@calcom/embed-react": "^1.5.3",
-    "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.9.1",
     "bootstrap": "^5.3.8",
     "gsap": "^3.13.0",
     "lenis": "^1.3.15",
@@ -21,8 +19,7 @@
     "react-bootstrap": "^2.10.10",
     "react-calendly": "^4.4.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.10.1",
-    "tsparticles": "^3.9.1"
+    "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
