--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,5 +32,5 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./dist/
-          server-dir: /domains/innovate360.us/  # Changed to your domain folder
+          server-dir: /domains/innovate360.us/public_html  # Changed to your domain folder
           dangerous-clean-slate: true
